# Terminus

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
Source/: CMakeLists.txt
Source/Terminus/: CMakeLists.txt  Global.h  GlobalMemory.cpp  GlobalMemory.h  Types.cpp  Types.h  main.cpp
Source/Terminus-Editor/: CMakeLists.txt  main.cpp
Source/Terminus-Engine/: CMakeLists.txt  Global.cpp  Global.h  Terminus.h  Types.cpp  Types.h  global.cpp  global.h  types.h
Source/Terminus-Engine/Core/: Application.cpp  Application.h  Config.h  application.cpp  application.h  config.h  config_file.cpp  config_file.h  context.h  engine_config.h  loading_thread.cpp  loading_thread.h  macro.h  rendering_thread.cpp  rendering_thread.h
Source/Terminus-Engine/ECS/: CameraComponent.h  Component.cpp  ComponentPool.h  MeshComponent.h  RenderSystem.cpp  RenderSystem.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ScriptComponent.h  System.cpp  System.h  TransformComponent.h  TransformSystem.cpp  TransformSystem.h  World.cpp  World.h  camera_component.h  camera_system.cpp  camera_system.h  component.h  component_pool.h  component_types.cpp  component_types.h  entity.h  mesh_component.h  physics_system.cpp  physics_system.h  render_system.cpp  render_system.h  rigid_body_component_factory.cpp  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  script_component.h  script_system.cpp  script_system.h  system.cpp  (+3 more)
Source/Terminus-Engine/GUI/: GLImGuiBackend.cpp  ImGuiBackend.h
Source/Terminus-Engine/Graphics/: Camera.cpp  Camera.h  CommandBuffer.h  Config.h  D3D11ImGuiBackend.cpp  D3D11RenderDevice.cpp  D3D11RenderDevice.h  D3D11Types.h  DrawItem.h  GLRenderDevice.cpp  GLRenderDevice.h  GLTypes.h  GraphicsQueue.h  Light.h  Material.h  RenderCommand.h  RenderCommon.h  RenderDevice.h  RenderPass.h  RenderPassCache.h  Renderer.cpp  Renderer.h  RenderingPath.h  camera.cpp  camera.h  command_buffer.h  draw_item.h  framebuffer_pool.cpp  graphics_queue.h  graphics_types_d3d11.h  graphics_types_gl.h  imgui_backend.h  imgui_backend_d3d11.cpp  imgui_backend_gl.cpp  imgui_console.cpp  imgui_console.h  imgui_helpers.cpp  imgui_helpers.h  light.h  material.h  (+13 more)
Source/Terminus-Engine/IO/: FileSystem.cpp  FileWatcher.cpp  FileWatcher.h  filesystem.cpp  filesystem.h  logger.cpp  logger.h
Source/Terminus-Engine/Input/: Input.cpp  Input.h  InputContext.h  PlayerContext.h  input.cpp  input_context.h  input_handler.cpp  input_handler.h  player_context.h
Source/Terminus-Engine/Math/: MathUtility.h  math_utility.h
Source/Terminus-Engine/Memory/: Allocator.h  FreeListAllocator.cpp  FreeListAllocator.h  LinearAllocator.cpp  LinearAllocator.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h  pool_allocator.h
Source/Terminus-Engine/Platform/: PlatformBackend.cpp  PlatformBackend.h  platform.cpp  platform.h
Source/Terminus-Engine/Resource/: AssetCache.h  AssetCommon.h  AssetFactory.h  AssetLoader.h  AssimpMeshLoader.cpp  AssimpMeshLoader.h  MaterialCache.cpp  MaterialCache.h  MaterialFactory.cpp  MaterialFactory.h  Mesh.h  MeshCache.cpp  MeshCache.h  MeshFactory.cpp  MeshFactory.h  RenderPassCache.cpp  RenderPassCache.h  RenderPassFactory.cpp  RenderPassFactory.h  SceneCache.cpp  SceneCache.h  SceneFactory.cpp  SceneFactory.h  ShaderCache.cpp  ShaderCache.h  ShaderFactory.cpp  ShaderFactory.h  ShaderKey.h  StbImageLoader.cpp  StbImageLoader.h  TSMLoader.cpp  TSMLoader.h  TextLoader.cpp  TextLoader.h  TextureCache.cpp  TextureCache.h  TextureFactory.cpp  TextureFactory.h  asset_cache.cpp  asset_cache.h  (+58 more)
Source/Terminus-Engine/Thread/: TaskQueue.cpp  TaskQueue.h  TaskScheduler.h  ThreadPool.cpp  ThreadPool.h  semaphore.h  thread_pool.h
Source/Terminus-Engine/Utility/: MeshImporter.h  StringUtility.h  code_reloader.cpp  code_reloader.h  dynamic_library.cpp  dynamic_library.h  imgui_helper.h  imgui_helpers.cpp  mesh_importer.h  process_dispatch.h  runtime_compile.cpp  runtime_compile.h  serializable.h  string_buffer.h  string_utility.h  timer.cpp  timer.h
Source/Terminus-Engine/container/: concurrent_queue.h  container_types.h  deque.h  handle.h  handle_array.h  hash_map.h  packed_array.h
Source/Terminus-Engine/editor/: component_desc.h  editor.cpp  editor.h  editor_entity.h  editor_scene.cpp  editor_scene.h  ieditor_window.h  main_dock_window.cpp  main_dock_window.h  project.cpp  project.h  project_selection_window.cpp  project_selection_window.h  project_wizard_window.h
Source/Terminus-Engine/physics/: physics_engine.cpp  physics_engine.h  physics_types.h
Source/Terminus-Engine/script/: cpp_script.h  lua_script.h  script_engine.cpp  script_engine.h  script_interface.h  script_interface_impl.cpp  script_interface_impl.h  test_script.cpp  test_script.h
Source/Terminus/ECS/: CameraComponent.h  Component.h  ComponentPool.h  ScriptComponent.h  System.h  TransformComponent.h  World.cpp  World.h
Source/Terminus/GUI/: GLImGuiBackend.cpp  (+1 more)
Source/Third Party/: CMakeLists.txt
editor/: CMakeLists.txt  Terminus-Editor.pro  Terminus-Editor.pro.user.6b24dd0  asset_browser_dock.cpp  asset_browser_dock.h  editor.cpp  editor.h  editor_app.cpp  editor_app.h  editor_dock.cpp  editor_dock.h  inspector_dock.cpp  inspector_dock.h  logger_dock.cpp  logger_dock.h  main.cpp  mainwindow.cpp  mainwindow.h  profiler_dock.cpp  profiler_dock.h  project.cpp  project.h  scene_heirachy_dock.cpp  scene_heirachy_dock.h  scene_viewport_dock.cpp  scene_viewport_dock.h  viewport_dock.cpp  viewport_dock.h
editor/platform/: platform_qt5.cpp  platform_qt5.h
engine/concurrency/: CMakeLists.txt
engine/event/: CMakeLists.txt
engine/gfx/: CMakeLists.txt
engine/memory/: CMakeLists.txt
engine/platform/: CMakeLists.txt
engine/src/: CMakeLists.txt
runtime/: CMakeLists.txt  main.cpp  runtime_app.cpp  runtime_app.h
runtime/graphics/: imgui_backend_sdl2.cpp
runtime/platform/: platform_sdl2.cpp  platform_sdl2.h
samples/: CMakeLists.txt
samples/1_triangle/: CMakeLists.txt
samples/2_texture/: CMakeLists.txt  main.cpp  shader.frag
tools/texture_import/: CMakeLists.txt
(+679 files in other folders)
