cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

project("Terminus")

include_directories("Third Party/glew/include”)
include_directories("Third Party/glfw/include”)
include_directories("Third Party/rapidjson")
include_directories("Third Party/imgui")
include_directories("Third Party/glm")
include_directories("Third Party/Libzip/lib")
include_directories("Third Party/simplefilewatcher")
include_directories("Third Party/stb")
include_directories("Third Party/FastDelegate")
include_directories("Third Party/Delegates11")
include_directories("Third Party/Bullet 3/src")
include_directories("Third Party/lua/src”)
include_directories("Third Party/Selene/include”)
include_directories("Terminus-Engine")

add_subdirectory("Terminus-Engine")
add_subdirectory("Terminus-Editor")
add_subdirectory("Third Party")