cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

add_subdirectory(glfw)
add_subdirectory(imgui)
add_subdirectory(glew/build/cmake)
add_subdirectory(Assimp)
add_subdirectory(LibZip)
add_subdirectory(simplefilewatcher)
add_subdirectory(AngelScript/projects/cmake)
add_subdirectory(nfd)
add_subdirectory(lua)
add_subdirectory(Boxer)
add_subdirectory("Bullet 3")
add_subdirectory("OpenAL Soft")