cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

add_subdirectory(SDL2)
add_subdirectory(imgui)
add_subdirectory(glew/build/cmake)
add_subdirectory(Assimp)
add_subdirectory(LibZip)
add_subdirectory(simplefilewatcher)
add_subdirectory(nfd)
add_subdirectory(luajit)
add_subdirectory(Boxer)
add_subdirectory("Bullet 3")
add_subdirectory("OpenAL Soft")